--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h1{
 .item{
     margin: 20px auto;
     text-align: center;
+    
 }
 
 .motiv{
@@ -85,74 +86,71 @@ h1{
     margin-top: 20px;
 }
 
-
-
-/* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
+.user_profile{
+    position: absolute;
+    display: none;
+    top: 40px;
+    right: 20px;
+    position: fixed;
+    margin: 0;
+    background-color: rgb(0, 0, 0, 0.4);
+    border-radius: 5px;
+    z-index: 1;
 }
 
-/* The popup form - hidden by default */
-.form-popup {
-  display: none;
+#user_name{
+    margin: 0;
+    padding: 10px;
+    display: inline;
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#profile_img{
+    border-radius: 50%;
+    object-fit: cover;
+    width: 40px;
+    height: 40px;
+    display: inline;
+}
+
+.popup{
+  background-color: rgb(0, 0, 0, 0.6);
+  position: fixed;
+  width: 100%;
+  height: 100%;
   position: absolute;
-  bottom: 50px;
-  left: 50%;
-  position: fixed;
-  margin-left: -150px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
+  top: 0;
+  display: none;
+  opacity: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
 }
 
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
+.popup-content{
+  height: 300px;
+  width: 500px;
   background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
+  text-align: center;
 }
 
-/* Full-width input fields */
-.form-container input[type=text], .form-container input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
+input{
+  margin: 20px auto;
+  display: block;
+  width: 50%;
+  padding: 8px;
+  border: 1px solid gray;
 }
 
-/* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Set a style for the submit/login button */
-.form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
+.closed{
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  border-radius: 50%;
+  z-index: 2;
   cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
 }
